# camx-cmake-x86

./: .gitignore  CMakeLists.txt
camera.qcom.so/: CMakeLists.txt  camx_runtime_stubs.cpp  chi_stub.cpp  csl_mock.cpp  dummy_node.cpp  hw_vendor_tags.cpp  validate_metadata_tags.cpp
camx_patched_srcs/: camxatomic.cpp  camxchisession.cpp  camxhwenvironment.cpp  camxnode.cpp  camxpipeline.cpp  camxvendortags.cpp
camx_stubs/: camxeebindriver.h  camxeepromdriver.h  camxexternalsensor.h  camxifestripinginterface.h  camxmem.h  camxpdafconfig.h  camxsensordriver.h  camxstatsdebugdatatypes.h  g_camxproperties.h  g_camxsettings.h  g_camxtitan17xsettings.h  imagesensormodulesetmanager.h  qdMetaData.h  tuningsetmanager.h
camx_stubs/android/: log.h
camx_stubs/cutils/: properties.h
camx_stubs/utils/: Log.h
chifeature2test/: CMakeLists.txt
chifeature2test/patched_srcs/: chifeature2base.cpp  chifeature2multistagedescriptor.cpp  chifeature2testmain.cpp  chimetadatautil.cpp  chimodule.cpp  chithreadmanager.cpp  chxmetadata.cpp  feature2buffermanager.cpp  feature2offlinetest.cpp  feature2testcase.cpp  genericbuffermanager.cpp
chifeature2test/stubs/: camxdefs.h  chibinarylog.h  chiframework_stubs.cpp  chiframework_types.h  chimetadatautil.h  chimodule.h  chiofflineloggerinterface.h  chxadvancedcamerausecase.h  chxblmclient.h  chxdefs.h  chxextensionmodule.h  chxincs.h  chxmulticamcontroller.h  chxperf.h  chxpipeline.h  chxsession.h  chxusecase.h  chxusecaseutils.h  chxusecaseutils_pruning.cpp  genericbuffermanager.h  xmllib_parser.h  xmllib_stub.cpp
nativechitest/: CMakeLists.txt  camera_metadata_port.cpp  camera_metadata_tag_info.cpp  string_compat.cpp
nativechitest/chiutils/: chxdebugprint.h  chxmetadata.cpp  chxutils.cpp  extension_stub.cpp  log_compat.cpp
nativechitest/nativechitest/: chimodule.cpp  chimodule.h  chitestcase.cpp
nativechitest/nativetestutils/: camera3common.h  camera3metadata.h  camera3stream.cpp  nativetestlog.cpp  nativetestlog.h
stubs/: camera3.h  camera_metadata_hidden.h  gralloc_priv.h  string_utils.h
stubs/cutils/: native_handle.h  trace.h
stubs/hardware/: camera3.h  camera_common.h  gralloc.h  gralloc1.h  power.h
stubs/log/: log.h
stubs/sync/: sync.h
stubs/system/: camera_metadata.h  camera_vendor_tags.h  graphics.h  window.h
stubs/ui/: GraphicBuffer.h  GraphicBufferMapper.h
stubs/utils/: RefBase.cpp  RefBase.h  StrongPointer.h
tools/: propgen.py
